homework-6/api-gateway/http-gateway.yaml
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: http-gateway
#  namespace: istio-system
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#      hosts:
#        - "arch.homework"

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - arch.homework
